# CliUiAgent

./: .clang-format  .gitignore  AgentVision.md  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  planAgenta.md
.agent/: memory.md  rules.md
.agents/rules/: git_workflow.md  project.md  workflow_rules.md
.claude/: settings.local.json
.github/workflows/: release.yml
build-scripts/: install-deps-linux.sh  install-deps-macos.sh  install-deps-windows.ps1  package-linux.sh  package-macos.sh  package-windows.ps1  run.ps1  run.sh  setup-profiles.sh  start-litellm-proxy.sh
docs/: AgentGraph_Plan.md  advanced_agentic_strategies.md  index.md  prompts_subagents_analysis_proposals.md  roadmap_proposals.md
docs/.obsidian/: app.json
docs/agent_plans/: foundation_refactor_plan.md  implementation_plan.md  innovations_proposal.md  llm_router_plan.md  plans_history.md  task.md  walkthrough.md
docs/architecture/: overview.md
docs/decisions/: ADR-001-qt6-vs-qt5.md  ADR-002-sol2-vs-lua-c-api.md  ADR-003-conan-vs-vcpkg.md  ADR-004-qprocess-vs-http.md
docs/guides/: building.md  cli-scripts-usage.md  writing-lua-scripts.md  writing-python-scripts.md
docs/help/: autonomous-agent.md  ci-cd.md  cli-profiles.md  getting-started.md  index.md  keyboard-shortcuts.md  lm-studio.md  scripting.md  sessions.md  ui-guide.md  voice-and-attachments.md  wizard-claude-code.md
examples/profiles/: claude-lmstudio-codestral.json  claude-lmstudio-qwen14b.json  claude-ollama-deepseek.json  llama-cpp-server.json  lmstudio-codestral.json  lmstudio-default.json  lmstudio-qwen-coder.json  ollama-codellama.json  ollama-deepseek-coder-33b.json  ollama-deepseek-coder.json  ollama-qwen-coder.json
ideas/: 2026-03-22_elite_toolset_specification.md
resources/icons/: app.icns
resources/profiles/: deepseek.json  llama.json  mistral.json  qwen3.json
resources/prompts/: architect.txt  base.txt  debugger.txt  executor.txt  explorer.txt  rag.txt  refactor.txt  reviewer.txt  security_auditor.txt
resources/stylesheets/: dark.qss  theme_template.qss
scripts/: rag_backend.py  select-settings.bat  select-settings.sh
src/: main.cpp
src/app/: Application.cpp  Application.h  CMakeLists.txt
src/cli/: CMakeLists.txt  ClaudeProfile.cpp  ClaudeProfile.h  CliProfile.h  CliRunner.cpp  CliRunner.h  ConfigurableProfile.cpp  ConfigurableProfile.h  GptProfile.cpp  GptProfile.h  OllamaProfile.cpp  OllamaProfile.h  ProfileEntry.h
src/core/: AgentEngine.cpp  AgentEngine.h  AgentEngine_Collab.cpp  AgentEngine_Loop.cpp  AgentEngine_Runner.cpp  AgentEngine_Tools.cpp  AgentGraph.cpp  AgentGraph.h  AgentPipeline.cpp  AgentPipeline.h  AgentRole.h  AppConfig.cpp  AppConfig.h  CMakeLists.txt  ChatController.cpp  ChatController.h  CodebaseVisualizer.cpp  CodebaseVisualizer.h  ContextManager.cpp  ContextManager.h  CrashHandler.cpp  CrashHandler.h  DiffUtils.cpp  DiffUtils.h  EnsembleManager.cpp  EnsembleManager.h  FileHotnessProvider.cpp  FileHotnessProvider.h  HuggingFaceImporter.cpp  HuggingFaceImporter.h  LlmDiscoveryService.cpp  LlmDiscoveryService.h  ModelProfileManager.cpp  ModelProfileManager.h  ModelRouter.cpp  ModelRouter.h  ProjectAuditor.cpp  ProjectAuditor.h  PromptManager.cpp  PromptManager.h  (+14 more)
src/core/rag/: CodebaseIndexer.cpp  CodebaseIndexer.h  EmbeddingManager.cpp  EmbeddingManager.h
src/core/tools/: ActivateTechniqueTool.h  AnalyzePerformanceTool.h  AnalyzeVisionTool.h  AskAgentTool.h  BashTool.h  BuildTool.h  CompleteTaskTool.h  ConsultCollaboratorTool.h  CreateWorkflowTool.h  DownloadModelProfileTool.h  ExportKnowledgeGraphTool.h  GitTool.h  GrepTool.h  ImportModelProfileTool.h  ListDirectoryTool.h  MathLogicTool.cpp  MathLogicTool.h  ModifyUiTool.h  PostNoteTool.h  ReadFileTool.h  ReadStacktraceTool.h  ReplaceTool.h  SearchFilesTool.h  SearchReplaceTool.h  SearchRepoTool.h  TakeScreenshotTool.h  ToolUtils.h  VisualizeCodebaseTool.h  WebSearchTool.h  WriteFileTool.h
src/data/: Attachment.cpp  Attachment.h  CMakeLists.txt  CodeBlock.h  JsonSerializer.cpp  JsonSerializer.h  LlmProvider.h  Message.cpp  Message.h  ModelProfile.h  Session.cpp  Session.h  ToolCall.h
src/scripting/: CMakeLists.txt  HookRegistry.cpp  HookRegistry.h  ScriptEngine.h  ScriptManager.cpp  ScriptManager.h
src/scripting/lua/: LuaEngine.cpp  LuaEngine.h
src/scripting/python/: PythonEngine.cpp  PythonEngine.h
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow_Generation.cpp  MainWindow_SetupUi.cpp  MainWindow_Slots.cpp  UpdateChecker.cpp  UpdateChecker.h
src/ui/chat/: ChatControlBanner.cpp  ChatControlBanner.h  ChatView.cpp  ChatView.h  DiffHighlighter.cpp  DiffHighlighter.h  DiffWidget.cpp  DiffWidget.h  MessageDelegate.cpp  MessageDelegate.h  MessageModel.cpp  MessageModel.h  PrecomputedLayout.h  ToolApprovalDialog.cpp  ToolApprovalDialog.h
src/ui/console/: ConsoleWidget.cpp  ConsoleWidget.h
src/ui/help/: HelpDialog.cpp  HelpDialog.h
src/ui/input/: AttachmentButton.cpp  AttachmentButton.h  InputPanel.cpp  InputPanel.h  VoiceButton.cpp  VoiceButton.h
src/ui/plugins/: PluginsDialog.cpp  PluginsDialog.h
src/ui/session/: SessionPanel.cpp  SessionPanel.h
src/ui/settings/: ProviderSettingsDialog.cpp  ProviderSettingsDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/ui/skills/: SkillsDialog.cpp  SkillsDialog.h
src/ui/widgets/: PixelCauldron.cpp  PixelCauldron.h  TerminalPanel.cpp  TerminalPanel.h  TerminalWidget.cpp  TerminalWidget.h  ThemeManager.cpp  ThemeManager.h
src/ui/workfolder/: SmartFileSortProxyModel.h  WorkFolderPanel.cpp  WorkFolderPanel.h  WorkFolderSelector.cpp  WorkFolderSelector.h
tests/: CMakeLists.txt  PromptTesting.cpp  test_agent_engine_parser.cpp  test_agent_engine_parser_advanced.cpp  test_chat_controller.cpp  test_cli_runner.cpp  test_consult_collaborator_tool.cpp  test_context_manager.cpp  test_java_codegen.cpp  test_json_serializer.cpp  test_lmstudio_integration.cpp  test_main.cpp  test_message_model.cpp  test_response_filter_streaming.cpp  test_response_parser.cpp  test_screenshot_tool.cpp  test_session_manager.cpp  test_tool_executor.cpp  test_tool_utils.cpp
(+23 files in other folders)
